# object_store_aws

./: .rust-analyzer.json  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: http.rs  lib.rs
tests/: tests.rs
