[package]
name = "object_store_aws"
version = "0.13.7"
edition = "2024"
rust-version = "1.88"
description = "Object store extension for AWS cloud"
readme = "README.md"
repository = "https://github.com/DoumanAsh/object_store_aws"
license = "BSL-1.0"
keywords = ["object_store", "AWS"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENCSE"
]

[dependencies.tokio]
version = "1"
default-features = false
features = ["sync"]

[dependencies.object_store]
version = "0.14"
default-features = false
features = ["aws-base"]

[dependencies.aws-config]
version = "1.8"
default-features = false
features = ["rt-tokio", "credentials-process", "behavior-version-latest"]

[dependencies.aws-credential-types]
version = "1"
default-features = false

[dependencies.aws-smithy-http-client]
version = "1.1"
default-features = false
features = ["default-client"]

[dependencies.aws-smithy-runtime-api]
version = "1"
default-features = false
features = ["http-1x"]

[dependencies.aws-smithy-types]
version = "1"
default-features = false
features = ["http-body-1-x"]

[dependencies.http-body-util]
version = "0.1"
default-features = false

[dependencies.tracing]
version = "0.1"
default-features = false
optional = true

[dev-dependencies.tokio]
version = "1"
features = ["rt", "macros"]

[dev-dependencies.aws-config]
version = "1"
features = ["test-util"]

[features]
ring = ["aws-smithy-http-client/rustls-ring", "object_store/ring"]
aws-lc = ["aws-smithy-http-client/rustls-aws-lc", "object_store/aws-lc-rs"]
aws-lc-fips = ["aws-smithy-http-client/rustls-aws-lc-fips"]
sso = ["aws-config/sso", "aws-config/credentials-login"]
tracing = ["dep:tracing"]

[lints.clippy]
style = "allow"

[package.metadata.docs.rs]
features = ["ring", "aws-lc", "aws-lc-fips"]
